--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,9 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-    <title>Fideliz</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <title>FidliZ - Dématérialisation de vos cartes de fidélités</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
