Intégration google analytics / events & correction diverses

--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,18 @@
     <!-- Custom scripts for all pages-->
     <script src="/js/sb-admin-2.js"></script>
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-6868568671322455",
+              enable_page_level_ads: true
+         });
+    </script>
+
     <!-- Page level plugins -->
 
     <!-- Page level custom scripts -->
     <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.4.0/js/bootstrap4-toggle.min.js"></script>
-
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
